src/components/atoms/page/Page.scss
@import "../../../styles/theme";

.page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: $spacing-4;

  font-family: "VT323";

  height: inherit;
  width: 70%;
  max-width: $monitor;
  min-width: $mobile-sm;
  max-height: 640px;

  .menu {
    display: flex;
    flex-direction: column;
    padding: $spacing-4;

    height: inherit;
    width: 100%;

    border: 3px solid black;

    background-color: #fefefe;

    overflow-y: scroll;

    .back {
      font-size: $font-2xl;
      margin-bottom: $spacing-2;
    }

    &.page-center {
      align-items: center;
      justify-content: center;
    }
  }

  @media screen and (max-width: $mobile) {
    width: 100%;
    max-height: none;
    overflow-x: scroll;
    overflow-y: scroll;
  }
}

